feat: implement proper documentation

--- a/aura-docs/src/pages/getting-started.mdx
+++ b/aura-docs/src/pages/getting-started.mdx
@@ -1,3 +1,30 @@
-# Getting Started
+# Getting Started with AURA Protocol
 
-This section will guide you through setting up and using the AURA Protocol.
+This guide will walk you through the essential steps to begin interacting with the AURA Protocol, from setting up your environment to connecting your wallet and making your first deposit.
+
+## Prerequisites
+
+Before you start, ensure you have the following:
+
+1.  **EVM-Compatible Wallet:** A cryptocurrency wallet that supports EVM-compatible networks (e.g., MetaMask, WalletConnect, Coinbase Wallet).
+2.  **Stablecoins:** Sufficient stablecoins (e.g., USDC, DAI, USDT) in your connected wallet on the target network (e.g., Sepolia Testnet or Ethereum Mainnet).
+3.  **Network Funds (Gas):** A small amount of the native currency of the target network (e.g., ETH on Sepolia/Mainnet) to cover transaction fees (gas).
+
+## Connecting Your Wallet
+
+The AURA Protocol frontend requires you to connect your wallet to interact with the smart contracts.
+
+1.  **Access the Application:** Open the AURA Protocol frontend application in your web browser.
+2.  **Click "Connect Wallet":** Locate and click the "Connect Wallet" button, usually found in the top-right corner of the dashboard.
+3.  **Select Your Wallet:** A prompt will appear, asking you to choose your preferred wallet provider (e.g., MetaMask).
+4.  **Approve Connection:** Follow the instructions in your wallet to approve the connection to the AURA Protocol. Once connected, your wallet address will be displayed.
+
+## Navigating the Dashboard
+
+Upon connecting your wallet, you will be directed to the main dashboard, which provides an overview of the vault's performance and your personal position.
+
+-   **Vault Statistics:** Displays key metrics like Total Value Locked (TVL), Vault APY (Annual Percentage Yield), the current strategy being employed, and total profit generated.
+-   **Deposit / Withdraw Tabs:** This is where you can manage your stablecoin deposits into and withdrawals from the AURA Vault.
+-   **Strategy Overview:** Provides detailed information about the underlying AI-powered arbitrage strategy.
+
+Continue to the [Frontend Usage](/frontend-usage) section for more detailed instructions on how to deposit and withdraw funds.
