--- a/aura-docs/src/pages/index.mdx
+++ b/aura-docs/src/pages/index.mdx
@@ -1,3 +1,21 @@
 # Welcome to AURA Protocol Documentation
 
-This is the official documentation for the AURA Protocol.
+The AURA Protocol is a groundbreaking platform designed to revolutionize decentralized finance (DeFi) through **AI-powered, stablecoin-native, and autonomous Real World Asset (RWA) arbitrage**. Our mission is to provide transparent, low-risk yields by exploiting global market inefficiencies, all powered by tokenized assets and robust DeFi mechanisms.
+
+## What is AURA Protocol?
+
+AURA stands at the intersection of artificial intelligence, blockchain technology, and traditional finance. It offers users a unique opportunity to earn sustainable returns on their stablecoin holdings by engaging in sophisticated arbitrage strategies that are typically inaccessible to individual investors.
+
+### Key Features:
+
+-   **AI-Powered Arbitrage:** Our proprietary AI models continuously scan global markets for price discrepancies in tokenized RWAs, identifying and executing profitable arbitrage opportunities autonomously.
+-   **Stablecoin-Native Yield:** All yields are generated and distributed in stablecoins, mitigating volatility risks associated with other cryptocurrencies and offering a predictable return profile.
+-   **Autonomous Execution:** The protocol operates autonomously, ensuring 24/7 execution of strategies without manual intervention, maximizing efficiency and reaction time to market movements.
+-   **Real World Asset (RWA) Focus:** By leveraging tokenized RWAs (such as short-duration US Treasury Bills), AURA bridges the gap between traditional finance and DeFi, providing exposure to institutional-grade assets with on-chain transparency.
+-   **Transparent & On-chain:** Every transaction, strategy execution, and profit distribution is recorded on the blockchain, providing unparalleled transparency and auditability.
+
+## Our Mission
+
+AURA Protocol aims to unlock new avenues for yield generation in DeFi, making sophisticated arbitrage strategies accessible, secure, and transparent for everyone. We believe in a future where high-quality, stable yields are a standard, not an exception, in the decentralized ecosystem.
+
+Dive into our documentation to understand how AURA Protocol works, how you can participate, and the technology powering this innovative platform.
